--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <title>Capstone</title>
     <link href="./resources/css/style.css" rel="stylesheet" href="/css/master.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
   </head>
   <body>
     <header>
       <div class="header-logo">
         <img src="./resources/images/ic-logo.svg" alt="">
         <p>
-          <span class="logo1">Colmar</span>
-          <span class="logo2">Academy</span>
+          <span class="first-part-logo">COLMAR</span><span class="second-part-logo">ACADEMY</span>
         </p>
       </div>
       <nav id="menu">
@@ -32,8 +32,8 @@
         <img src="./resources/images/banner.jpg" alt="">
       </div>
       <div class="body-text">
-        <h1>Learn something new everyday</h1>
-        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+        <h1>Learn something <br>new everyday</h1>
+        <h2>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</h2>
         <p>
           <span>Start here</span>
         </p>
@@ -117,7 +117,7 @@
           <div class="box-text">
             <h2>Design</h2>
             <h3>COURSES</h3>
-            <p>User Experience Design, User Research, Visual Design</p>
+            <p>User Experience Design, User Research, <br> Visual Design</p>
           </div>
         </div>
         <div class="boxes">
@@ -137,7 +137,7 @@
           <div class="box-text">
             <h2>Business</h2>
             <h3>COURSES</h3>
-            <p>Product Development, Business Development, Startup</p>
+            <p>Product Development, Business Development,<br> Startup</p>
           </div>
         </div>
         <div class="boxes">
